--- a/client/package.json
+++ b/client/package.json
@@ -4,16 +4,13 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
-    "@material-ui/core": "^4.10.1",
+    "@material-ui/core": "4.11.0",
     "@material-ui/icons": "^4.9.1",
-    "@reach/router": "^1.3.3",
-    "@testing-library/jest-dom": "^5.9.0",
-    "@testing-library/react": "^10.2.1",
-    "@testing-library/user-event": "^11.2.1",
+    "@reach/router": "1.3.4",
     "normalize.css": "^8.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "^3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
